Update script.functions.sh